added testdino token

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -119,6 +119,6 @@ jobs:
       - name: Send TestDino report
         run: |
           npx --yes tdpw ./playwright-report \
-            --token=${{ secrets.TESTDINO_TOKEN }} \
+            --token="trx_development_754e3c870f69bd019c8142461d9b6484f3e7fb4494537314c20dc9b125bc37a8" \
             --upload-html \
             --verbose
