--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -18,3 +18,11 @@ steps:
 - script: |
     npm install
   displayName: 'npm install and build'
+
+- script: |
+    npx playright test 
+  displayName: Run playwright tests
+
+- script: |
+    npx --yes tdpw playwright-report --token="trx_production_893742b48c252a26c1e2580c005450fefd053e48ca593fc70d78064b761df890" --upload-html
+  displayName: Upload Report to TestDino
